--- a/css/styles_sh.css
+++ b/css/styles_sh.css
@@ -244,7 +244,7 @@ li.challenge, li.nr{
 /********* Mid-fid *********/
 
 #mid-fid{
-    background:#EDEFF4;
+    background:#F8F8F8;
 }
 
 .mid-fid-wrapper{
@@ -258,7 +258,12 @@ li.challenge, li.nr{
 }
 
 .mid-fid-item{
-    margin: 5px;
+    margin: 10px;
+}
+
+.mid-fid-item img, .hi-fid-item img{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    
 }
 
 
@@ -279,7 +284,7 @@ li.challenge, li.nr{
 /********* Hi-Fid *********/
 
 #hi-fid{
-    background:#EDEFF4;
+    background:#F8F8F8;
 }
 
 .hi-fid-item{
