--- a/css/styles.css
+++ b/css/styles.css
@@ -356,8 +356,7 @@ a.logo:hover{
 .hero-pic{
     flex-basis: 50%;
     align-items: center;
-    box-sizing: content-box;
-    
+    box-sizing: content-box;    
 }
 
 .hero-cta{
@@ -403,6 +402,8 @@ a.logo:hover{
     margin: 1%;
     width: 45%;
     min-width: 300px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+
 }
 
 .project:hover img{
@@ -542,6 +543,7 @@ color: #0C0093;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 }
 
 .mySlides {
