--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,9 @@ main{
     padding-right: 2rem;
     background: #0C0093;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
- ;
+    -webkit-box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+
 }
 
 .button-primary {
@@ -214,11 +216,10 @@ main{
 .button-primary:hover, .button-primary:focus  {
     color: white;
     transform: translate(0,-2px);
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
     transition: transform 0.25s;
-
-
-
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
 }
 
 .button:active{
@@ -241,6 +242,9 @@ main{
     text-decoration: none;
     transform: translate(0,-2px);
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
+
 }
 
 .button-secondary{
@@ -256,6 +260,8 @@ main{
     color: #0C0093;
     transform: translate(0,-2px);
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
 }
 
 /********** Top Navigation Bar **********/
@@ -403,6 +409,8 @@ a.logo:hover{
     width: 45%;
     min-width: 300px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 
 }
 
@@ -441,6 +449,7 @@ width: 100%;
 .image__overlay--blur{
 backdrop-filter: blur(5px);
 -webkit-backdrop-filter: blur(5px);
+-moz-backdrop-filter: blur(5px);
 }
 
 .image__overlay:hover{
@@ -544,6 +553,8 @@ color: #0C0093;
     flex-direction: column;
     justify-content: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 }
 
 .mySlides {
@@ -608,27 +619,6 @@ color: #0C0093;
 .active, .dot:hover {
   background-color: #0C0093;
 }
-
-/* Fading animation
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 5s;
-  -webkit-animation-iteration-count: 1;
-  animation-name: fade;
-  animation-duration: 5s;
-  animation-iteration-count: 1;
-  animation-play-state:initial;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: 0}
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: 0}
-  to {opacity: 1}
-} */
 
 .text h4{
     color: #0C0093;
