--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ h6{
     line-height: 17px;
 }
 
-body, p{
+p{
     font-weight: normal;
     font-size: 1.125rem; /*18px;*/
     line-height: 30px;
@@ -104,6 +104,9 @@ label{
     font-size: 1rem; /*16px*/
     line-height: 20px;
 }
+
+
+/********** Links CSS Effect *********/
 
 a{
     color:#0C0093;
@@ -343,6 +346,9 @@ a.logo:hover{
     padding-left: 5%;
     padding-right: 5%;
 }
+
+
+
 
 
 /********** Home Hero **********/
@@ -630,7 +636,7 @@ color: #0C0093;
 #contact{
     background-color: white;
     padding-top: 3%;
-    padding-bottom: 10%;
+    padding-bottom: 3%;
 }
 
 .contact{
