--- a/css/styles.css
+++ b/css/styles.css
@@ -289,7 +289,7 @@ main{
     justify-content: space-between;
     align-items: center;
     transition: top 0.3s; /* Transition effect when sliding down (and up) */
-    z-index: 1;
+    z-index: 100;
 
 }
 
@@ -301,6 +301,7 @@ main{
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    margin-right: 20px;
 }
 
 nav li {
@@ -436,10 +437,9 @@ a.logo:hover{
 
 .project:hover img{
     transform: translate(0,-2px);
-    background:#FFA7A7;
     opacity: 0.8;
-    transition: opacity 0.5s;
     transition: transform 0.5s;
+    background-color: #FFA7A7;
 }
 
 .white-background img{
@@ -489,11 +489,14 @@ a.logo:hover{
 }
 
 .image__overlay:hover{
-    opacity: 1;
+    background-color: #FFA7A7;
+    opacity: 0.7;
 }
+
 
 .image__title h2{
     color: #ffffff;
+    opacity: 1;
 }
 
 .image__overlay > * {
