--- a/css/styles.css
+++ b/css/styles.css
@@ -467,7 +467,6 @@ a.logo:hover{
     transform: translate(0,-2px);
     opacity: 0.8;
     transition: transform 0.5s;
-    background-color: #FFA7A7;
 }
 
 
@@ -526,7 +525,7 @@ a.logo:hover{
     color: #0C0093;
 }
 
-.project-content h3 a:hover{
+.project-content h3 a:hover{ /* Coming Soon*/
     color: #FFA7A7;
 }
 
@@ -536,7 +535,7 @@ a.logo:hover{
 
 .image__overlay{
     position: absolute;
-    top:0;
+    top: 0;
     left: 0;
     width:100%;
     height:100%;
@@ -554,9 +553,10 @@ a.logo:hover{
     -moz-backdrop-filter: blur(5px);
 }
 
-.image__overlay:hover{
+.image__overlay:hover{        
+    border-radius: 10px 10px 0 0;
     background-color: #FFA7A7;
-    opacity: 0.7;
+    opacity: 0.5;
 }
 
 
@@ -845,14 +845,16 @@ Small devices // Smaller than iPad (768px and smaller)
 
     .image__overlay{
         opacity: 1;
-        justify-content: flex-end;
+        justify-content: center;
+        background-color:rgb(255, 167, 167, 0.5);
         padding-bottom: 10px;
+        border-radius: 10px 10px 0 0;
 
     }
 
     .image__overlay h2{
-        font-size: 16px;
-        color:#FFA7A7;
+        font-size: 30px;
+        color: white;
 
     }
     .image__overlay--blur{
@@ -885,6 +887,24 @@ Large devices (1024px or larger)
    .project-content{
       min-height: 330px;
     }
+
+     .image__overlay{
+        opacity: 1;
+        justify-content: center;
+        background-color:rgb(255, 167, 167, 0.5);
+        padding-bottom: 10px;
+        border-radius: 10px 10px 0 0;
+
+    }
+
+    .image__overlay h2{
+        font-size: 30px;
+        color: white;
+
+    }
+    .image__overlay--blur{
+        backdrop-filter: blur(0px);
+        }
 }
 /* ==============================
 X-large devices (1440px or larger)
