Fixed View on Large Screens Typography Linsenpate

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 /* Colors used:
 Primary Color: #0C0093;
 Secondary Color: #FDFF92;
+Accent Color: #FFA7A7;
 Text color: #343434;
 Background: #F8F8F8;
 */
