--- a/css/styles_lp.css
+++ b/css/styles_lp.css
@@ -8,7 +8,8 @@ Grey bg: #F8F8F8;
 /*********** Linsenpate Intro **********/
 
 #lp-intro{
-    padding-top: 10%;
+    display: flex;
+    align-content: center;
     height: 100vh;
 }
 
