--- a/css/styles.css
+++ b/css/styles.css
@@ -772,7 +772,7 @@ a.logo:hover{
 }
 
 .contact{
-    margin-bottom: 5%;
+    padding-bottom: 5%;
 }
 
 .contact-button{
@@ -795,6 +795,7 @@ a.logo:hover{
     background-color: #FDFF92;
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-content: center;
     align-items: center; 
@@ -803,9 +804,9 @@ a.logo:hover{
 .imprint h6{
     text-align: center;
     color: #343434;
-    margin-top: 20px;
-    margin-bottom: 20px;
     font-weight: normal;
+    padding-top: 20px;
+    padding-bottom: 20px;
     padding-right: 16px;
     padding-left: 16px;
 }
@@ -922,8 +923,8 @@ Small devices // Smaller than iPad (768px and smaller)
     }
 
     #contact{
-        margin-top: 120px;
-        margin-bottom: 120px;
+        padding-top: 120px;
+        padding-bottom: 120px;
     }
 
     .project-content{
@@ -1010,6 +1011,7 @@ Large devices (1024px or larger)
     .image__overlay h2{
         font-size: 30px;
         color: white;
+        text-align: center;
     }
 
     .image__overlay--blur{
