--- a/css/styles_st.css
+++ b/css/styles_st.css
@@ -17,6 +17,7 @@ Grey bg: #F8F8F8;
 }
 
 .st-intro-flex-grid{
+    margin-top: 5%;
     padding-bottom: 6%;
     display: flex;
     align-items: center;
@@ -58,6 +59,11 @@ Grey bg: #F8F8F8;
     
 }
 
+.subheader {
+    color: #0C0093;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
 
 /*********** Setting Challenge **********/
 
