--- a/css/styles_lp.css
+++ b/css/styles_lp.css
@@ -14,6 +14,7 @@ Grey bg: #F8F8F8;
 }
 
 .lp-intro-flex-grid{
+    margin-top: 5%;
     padding-bottom: 6%;
     display: flex;
     align-items: flex-end;
@@ -51,6 +52,11 @@ Grey bg: #F8F8F8;
     max-width: 240px;
 }
 
+.subheader{
+    color: #0C0093;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
 /*********** Linsenpate Challenge **********/
 
 #challenge{
