--- a/css/styles_sh.css
+++ b/css/styles_sh.css
@@ -46,6 +46,7 @@ li{
 }
 
 .sh-intro-flex-grid{
+    margin-top: 5%;
     padding-bottom: 6%;
     display: flex;
     align-items: center;
@@ -77,6 +78,11 @@ li{
     margin-top: 6px;
 }
 
+.subheader {
+    color: #0C0093;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
 
 /********* Setting Project Description *********/
 
