--- a/css/styles.css
+++ b/css/styles.css
@@ -163,10 +163,15 @@ main{
 }
 
 .pic-animation:hover{
+    transform: translate(0, -5px);
+    transition: ease-in 0.5s;
     transform: rotate(1deg);
-
 }
 
+.pic-animation {
+    transform: translate(0, -5px);
+    transition: ease-out 0.5s;
+}
 /********** Buttons **********/
 
 
@@ -444,7 +449,7 @@ a.logo:hover{
     padding-bottom: 5%;
     padding-left: 2%;
     padding-right: 2%;
-    transform: translate(0,-2px);
+    transform: translate(0,-4px); 
     cursor: pointer;
 }
 
@@ -465,7 +470,7 @@ a.logo:hover{
 }
 
 .project:hover img{
-    transform: translate(0,-2px);
+    transform: translate(0,-5px);
     opacity: 0.8;
     transition: transform 0.5s;
 }
