--- a/css/styles.css
+++ b/css/styles.css
@@ -161,7 +161,7 @@ main{
     opacity: 100%;
     }
 }
-
+/* 
 .pic-animation:hover{
     transform: translate(0, -5px);
     transition: ease-in 0.5s;
@@ -171,7 +171,7 @@ main{
 .pic-animation {
     transform: translate(0, -5px);
     transition: ease-out 0.5s;
-}
+} */
 /********** Buttons **********/
 
 
@@ -408,11 +408,11 @@ a.logo:hover{
     padding-top:5%;
 }
 
-.hero-pic{
+/* .hero-pic{
     flex-basis: 50%;
     align-items: center;
     box-sizing: content-box;    
-}
+} */
 
 .hero-cta{
     flex-basis: 50%;
