--- a/css/styles.css
+++ b/css/styles.css
@@ -440,8 +440,8 @@ a.logo:hover{
     display: flex;
     flex-direction: row;
     flex-flow: row wrap;
-    justify-content: flex-start;
-    align-content: flex-start;
+    justify-content: space-between;
+    align-content: center;
     align-items: flex-start;
     width: 100%;
     padding-left: 2%;
@@ -480,7 +480,7 @@ a.logo:hover{
     margin-top: 24px;
     margin-left: 24px;
     margin-right: 24px;
-    min-height: 250px;
+    min-height: 270px;
 }
 
 .project-title{
